<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/placeholder"
        android:inputType="phone" />

    <TextView
        android:id="@+id/pax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pax" />

    <EditText
        android:id="@+id/editPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/placeholder"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/svsDisabled"
            android:textOn="@string/svsEnabled" />

        <ToggleButton
            android:id="@+id/tbGst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/gstDisabled"
            android:textOn="@string/gstEnabled" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/editDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:ems="10"
            android:hint="@string/placeholder"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:buttonTint="@color/green"/>

            <RadioButton
                android:id="@+id/payNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payNow"
                android:buttonTint="@color/orange"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/split" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:backgroundTint="@color/red"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalBill" />

        <TextView
            android:id="@+id/eachPays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eachPays" />
    </LinearLayout>


</LinearLayout>